Introduce new UI for input options
Using querySelectorAll, created a list of button nodes and then iterated
through them and created event listeners for clicks for each of them. If
any of them were to be clicked, a round of the game will start with the
players selection being the button's value.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
 
     <body>
+        <button class="rock" value="rock">Rock</button>
+        <button class="paper" value="paper">Paper</button>
+        <button class="scissors" value="scissors">Scissors</button>
         <script src="script.js"></script>
     </body>
 </html>
