Add display message for results
Changed the previous console.log to instead display on screen to show
who won the round. Then, set up a counter that will declare the winner
when either player or computer hits 5 wins.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <button class="rock" value="rock">Rock</button>
         <button class="paper" value="paper">Paper</button>
         <button class="scissors" value="scissors">Scissors</button>
+        <div class="results">Player: 0 | Computer: 0</div>
         <script src="script.js"></script>
     </body>
 </html>
